# VulkanRenderEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/Shaders/: Triangle.slang  Triangle.spv
Modules/: CMakeLists.txt
Modules/Editor/: CMakeLists.txt
Modules/Editor/Include/VREngine/: Editor.hpp
Modules/Editor/Source/: Editor.cpp  Main.cpp
Modules/Engine/: CMakeLists.txt
Modules/Engine/Include/VREngine/: Assets.hpp  Core.hpp  Engine.hpp  Vulkan.hpp  Window.hpp
Modules/Engine/Include/VREngine/Assets/: AssetHandle.hpp  AssetServer.hpp  FileAsset.hpp  TextureAsset.hpp
Modules/Engine/Include/VREngine/Core/: EventObserver.hpp  Includes.hpp  Logger.hpp
Modules/Engine/Include/VREngine/Vulkan/: Buffer.hpp  Command.hpp  Context.hpp  Descriptor.hpp  Image.hpp  Pipeline.hpp  Queue.hpp  RenderPass.hpp  Shader.hpp  Synchronization.hpp  Types.hpp
Modules/Engine/Include/VREngine/Window/: Enums.hpp  Events.hpp
Modules/Engine/Source/: Window.cpp
Modules/Engine/Source/Assets/: AssetServer.cpp  FileAsset.cpp  TextureAsset.cpp
Modules/Engine/Source/Core/: EventObserver.cpp  Logger.cpp
Modules/Engine/Source/Vulkan/: Buffer.cpp  Command.cpp  Context.cpp  Descriptor.cpp  Image.cpp  Pipeline.cpp  Queue.cpp  RenderPass.cpp  Shader.cpp  Synchronization.cpp
Modules/Engine/Source/Window/: Enums.cpp  Events.cpp
